syntax = "proto3";
package resource;

option go_package = "github.com/talos-systems/theila/api/rpc";

import "talos/resource/resource.proto";
import "common/theila.proto";

message GetFromClusterRequest {
  resource.GetRequest resource = 1;
}

message GetFromClusterResponse {
  // Body should contain JSON encoded spec.
  string body = 1;
}

message ListFromClusterRequest {
  resource.ListRequest resource = 1;
  // Selectors allow filtering list results by labels.
  repeated string selectors = 2;
}

message ListFromClusterResponse {
  // Messages should contain JSON encoded list spec.
  repeated string messages = 1;
}

message ConfigResponse {
  // Data raw config data.
  string data = 1;
}

message UpgradeK8sSpec {
  // K8s version to upgrade to.
  string version = 1;
  // The list of nodes to perform upgrade on.
  repeated string nodes = 2;
}

service ClusterResourceService {
  rpc Get(GetFromClusterRequest) returns (GetFromClusterResponse);
  rpc List(ListFromClusterRequest) returns (ListFromClusterResponse);
  rpc GetConfig(common.Cluster) returns (ConfigResponse);
}
